Update Docker configuration for multi-stage build
- Fixed .dockerignore to include solution file for build
- Updated Dockerfile to copy all 6 project files from solution
- Multi-stage build now properly restores all dependencies
- Tested locally with docker-compose - API runs successfully

--- a/SAFEBoda/SafeBoda.Api/Dockerfile
+++ b/SAFEBoda/SafeBoda.Api/Dockerfile
@@ -2,19 +2,23 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copy the solution/project files
+# Copy the solution file
+COPY ["SafeBoda.sln", "."]
+# Copy ALL project files (all 6 projects from the solution)
 COPY ["SafeBoda.Api/SafeBoda.Api.csproj", "SafeBoda.Api/"]
 COPY ["SafeBoda.Application/SafeBoda.Application.csproj", "SafeBoda.Application/"]
 COPY ["SafeBoda.Core/SafeBoda.Core.csproj", "SafeBoda.Core/"]
 COPY ["SafeBoda.Infrastructure/SafeBoda.Infrastructure.csproj", "SafeBoda.Infrastructure/"]
+COPY ["SafeBoda.Admin/SafeBoda.Admin.csproj", "SafeBoda.Admin/"]
+COPY ["SafeBoda.Api.Tests/SafeBoda.Api.Tests.csproj", "SafeBoda.Api.Tests/"]
 
-# Restore dependencies
-RUN dotnet restore "SafeBoda.Api/SafeBoda.Api.csproj"
+# Restore dependencies for the entire solution
+RUN dotnet restore "SafeBoda.sln"
 
 # Copy everything else
 COPY . .
 
-# Build and publish
+# Build and publish ONLY the API project
 WORKDIR "/src/SafeBoda.Api"
 RUN dotnet build "SafeBoda.Api.csproj" -c Release -o /app/build
 RUN dotnet publish "SafeBoda.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
