--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx with container driver
+        uses: docker/setup-buildx-action@v3
+
       # Log in to Docker Hub using your GitHub Secrets
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -55,7 +58,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./SAFEBoda  # ← Changed from . to ./SAFEBoda
+          context: ./SAFEBoda
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           cache-from: type=gha
