CRITICAL FIX: Change context from ./SAFEBoda/SafeBoda.Api to ./SAFEBoda

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./SAFEBoda/SafeBoda.Api  # ← CHANGED THIS LINE
+          context: ./SAFEBoda
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           cache-from: type=gha
