--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./SAFEBoda
+          file: ./SAFEBoda/SafeBoda.Api/Dockerfile
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           cache-from: type=gha
