--- a/SAFEBoda/SafeBoda.Api/appsettings.json
+++ b/SAFEBoda/SafeBoda.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SafeBodaDb": "Server=localhost;Port=3307;Database=SafeBodaDb;User=root;Password=Alexis1!;"
+    "SafeBodaDb": ""
   },
   "JWT": {
     "ValidIssuer": "SafeBoda",
